--- a/MathLib/MathLib/Mathematics.csproj
+++ b/MathLib/MathLib/Mathematics.csproj
@@ -44,6 +44,9 @@
     <Compile Include="FactorialStrategy\IFactorialStrategy.cs" />
     <Compile Include="IMathLib.cs" />
     <Compile Include="MathLib.cs" />
+    <Compile Include="MathLibFactory\FactorialAlgorithm.cs" />
+    <Compile Include="MathLibFactory\IMathLibFactory.cs" />
+    <Compile Include="MathLibFactory\MathLibFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
